<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbg"
    tools:context="com.ho.mycheckbook.MainActivity">

    <EditText
        android:id="@+id/showCN"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="0dp"
        android:enabled="false"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:text="@string/_ZERO"
        android:textAlignment="textEnd"
        android:textColor="@color/colorwords"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/showEN"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="0dp"
        android:enabled="false"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:text="@string/_NO_DOLLARS"
        android:textAlignment="textEnd"
        android:textColor="@color/colorwords"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showCN" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/inputview"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/inputgradient"
        app:layout_constraintTop_toBottomOf="@+id/showEN"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <Button
            android:id="@+id/btnCancelInput"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/icon_cancel"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:text="123.33"
            android:textAlignment="textEnd"
            android:textSize="36sp"
            android:enabled="false"
            app:layout_constraintLeft_toRightOf="@+id/btnCancelInput"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"
            tools:ignore="RtlHardcoded" />

    </android.support.constraint.ConstraintLayout>



    <GridLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:rowCount="4"
        android:columnCount="3"
        android:background="@drawable/gradient"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/inputview"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_7"
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_8"
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_9"
            android:textColor="@color/colornumber"
            android:textColorHighlight="@color/colorPrimary"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_4"
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_5"
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_6"
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_1"
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_2"
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_3"
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnDOT"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_."
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_0"
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnBACKSPACE"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/_x"
            android:textColor="@color/colornumber"
            android:textSize="24sp"
            android:typeface="monospace" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
